# gpt-cli

./: pyproject.toml
GPT/: README.md  gpt_cli.py  gpt_cli.toml  requirements.txt
